Fix spacing of content area and footer

--- a/wp-content/themes/sol/sass/layout/_global.scss
+++ b/wp-content/themes/sol/sass/layout/_global.scss
@@ -1,4 +1,4 @@
-.site-content {
+.content-area {
   padding: 1em;
 
   @media screen and (min-width: $query__small) {
