--- a/wp-content/themes/sol/style.css
+++ b/wp-content/themes/sol/style.css
@@ -691,12 +691,12 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 ## Global layouts
 --------------------------------------------------------------*/
-.site-content {
+.content-area {
 	padding: 1em;
 }
 
 @media screen and (min-width: 600px) {
-	.site-content {
+	.content-area {
 		padding: 2em;
 	}
 }
